--- a/omnipaxos/index.html
+++ b/omnipaxos/index.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="../getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="../introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../ble/index.html"><strong aria-hidden="true">2.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded "><a href="../omnipaxos/index.html" class="active"><strong aria-hidden="true">3.</strong> OmniPaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../omnipaxos/communication.html"><strong aria-hidden="true">3.1.</strong> Communication</a></li><li class="chapter-item expanded "><a href="../omnipaxos/round.html"><strong aria-hidden="true">3.2.</strong> Round</a></li><li class="chapter-item expanded "><a href="../omnipaxos/logging.html"><strong aria-hidden="true">3.3.</strong> Logging</a></li><li class="chapter-item expanded "><a href="../omnipaxos/configuration.html"><strong aria-hidden="true">3.4.</strong> Configuration</a></li><li class="chapter-item expanded "><a href="../omnipaxos/storage.html"><strong aria-hidden="true">3.5.</strong> Storage</a></li><li class="chapter-item expanded "><a href="../omnipaxos/garbage-collection.html"><strong aria-hidden="true">3.6.</strong> Garbage Collection</a></li></ol></li><li class="chapter-item expanded "><a href="../project.html">Project Info</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="../getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="../introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../omnipaxos/index.html" class="active"><strong aria-hidden="true">2.</strong> OmniPaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../omnipaxos/communication.html"><strong aria-hidden="true">2.1.</strong> Communication</a></li><li class="chapter-item expanded "><a href="../omnipaxos/garbage-collection.html"><strong aria-hidden="true">2.2.</strong> Garbage Collection</a></li><li class="chapter-item expanded "><a href="../omnipaxos/logging.html"><strong aria-hidden="true">2.3.</strong> Logging</a></li></ol></li><li class="chapter-item expanded "><a href="../ble/index.html"><strong aria-hidden="true">3.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded affix "><a href="../project.html">Project Info</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -149,35 +149,78 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="omnipaxos"><a class="header" href="#omnipaxos">OmniPaxos</a></h1>
-<p>In this section, we will introduce the features of OmniPaxos in detail.</p>
-<p>In particular, we will talk about <a href="communication.html">communication</a>, <a href="round.html">round</a>, as well as how to <a href="configuration.html">configure</a> it, before describing some of the advanced options for Omnipaxos, such as <a href="garbage-collection.html">garbage collection</a>, <a href="logging.html">logging</a>, and <a href="storage.html">storage</a>.</p>
-<p>An OmniPaxos replica maintains a local state of the replicated log, handles incoming messages and produces outgoing messages that the user has to fetch periodically and send using a network implementation.
-The user also has to periodically fetch the decided entries that are guaranteed to be strongly consistent and linearizable, and therefore also safe to be used in the higher-level application.</p>
-<p>An OmniPaxos replica can be initialised by calling one of the two constructors. The second constructor uses a hocon configuration which will be discussed in further detail in <a href="../omnipaxos/configuration.html">configuration</a>.</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">OmniPaxos::with(
-    config_id: u32,
-    pid: u64,
-    peers: Vec&lt;u64&gt;,
-    storage: Storage&lt;R, S, P&gt;,
-    skip_prepare_use_leader: Option&lt;Leader&lt;R&gt;&gt;,
-    logger: Option&lt;Logger&gt;,
-    log_file_path: Option&lt;&amp;str&gt;,
-)
+<p>Each server in the cluster should have a local instance of the  <code>OmniPaxos</code> struct. <code>OmniPaxos</code> maintains a local state of the replicated log, handles incoming messages and produces outgoing messages that the user has to fetch and send using their network implementation. The user also has to fetch the decided entries that are guaranteed to be strongly consistent and linearizable, and therefore also safe to be used in a higher-level application.</p>
+<blockquote>
+<p><strong>Note:</strong> <code>OmniPaxos</code> has a type parameter <code>R</code> that must implement the trait <code>Round</code>. This is the round numbers used in the log replication. It will be provided and furthered explained in <a href="../ble/index.html">Ballot Leader Election</a>, but for simplicity the reader can for now assume <code>R</code> to be <code>u64</code>.</p>
+</blockquote>
+<h2 id="storage"><a class="header" href="#storage">Storage</a></h2>
+<p>The replicated log can be stored using any underlying implementation provided by the user. OmniPaxos only requires a user to implement the traits <code>PaxosState&lt;R&gt;</code> and <code>Sequence&lt;R&gt;</code>. The <code>PaxosState&lt;R&gt;</code> maintains the internal state of the <code>OmniPaxos</code>, while <code>Sequence&lt;R&gt;</code> maintains the actual replicated log. The storage is split into these two traits since <code>PaxosState&lt;R&gt;</code> stores small values such as indexes, while <code>Sequence&lt;R&gt;</code> stores larger data (the log entries). Thus it is possible to tailor-fit the implementations respectively. </p>
+<h3 id="example-in-memory-storage"><a class="header" href="#example-in-memory-storage">Example: In-memory storage</a></h3>
+<p>OmniPaxos provides an in-memory storage implementation in the traits <code>MemorySequence</code> and <code>MemoryState</code>.</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos::storage::memory_storage::{MemorySequence, MemoryState, Storage};
 
-OmniPaxos::with_hocon(
-    cfg: &amp;Hocon,
-    peers: Vec&lt;u64&gt;,
+let storage = Storage::with(MemorySequence::&lt;R&gt;::new(), MemoryState::&lt;R&gt;::new());
+</code></pre>
+<h2 id="creating-an-omnipaxos-instance"><a class="header" href="#creating-an-omnipaxos-instance">Creating an OmniPaxos instance</a></h2>
+<p>The constructor of <code>OmniPaxos</code> has the following parameters.</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">OmniPaxos::with(
+    config_id: u32,                                 // the configuration id. See the section &quot;Reconfiguration&quot; in `Communication`.
+    pid: u64,                                       // the unique identifier of this server
+    peers: Vec&lt;u64&gt;,                                // the PEERS of this server. I.e. this should not include `pid`
     storage: Storage&lt;R, S, P&gt;,
-    skip_prepare_use_leader: Option&lt;Leader&lt;R&gt;&gt;,
-    logger: Option&lt;Logger&gt;,
+    skip_prepare_use_leader: Option&lt;Leader&lt;R&gt;&gt;,     // optimization to start with pre-determined leader after
+                                                    // reconfiguration. See &quot;Reconfiguration&quot;.
+    logger: Option&lt;Logger&gt;,                         // custom logger
+    log_file_path: Option&lt;&amp;str&gt;,                    
 )
+</code></pre>
+<p>With the initialized storage, we can go ahead and create our <code>OmniPaxos</code> replica instance:</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos::paxos::OmniPaxos;
+
+// configuration with id 1 and the following cluster
+let configuration_id = 1;
+let _cluster = vec![1, 2, 3];
+
+// create the replica 2 in this cluster (other replica instances are created similarly with pid 1 and 3 on other servers)
+let my_pid = 2;
+let my_peers= vec![1, 3];
+
+let omni_paxos = OmniPaxos::with(
+    configuration_id,
+    my_pid,
+    my_peers,
+    storage,
+    None,
+    None,
+    Some(&quot;omnipaxos/logs&quot;)
+);
+</code></pre>
+<p>For convenience, OmniPaxos also features a constructor <code>OmniPaxos::with_hocon()</code> using <a href="https://vleue.com/hocon.rs/hocon/index.html">hocon</a>. One could then instead have some of the parameters in a file <code>config/server2.conf</code></p>
+<pre><code class="language-json">{
+    config_id: 1,
+    pid: 2,
+    log_file_path: &quot;/omnipaxos/logs&quot;
+}
+</code></pre>
+<p>This can then be loaded to construct OmniPaxos:</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">let cfg = HoconLoader::new()
+    .load_file(&quot;config/server2.conf&quot;)?
+    .hocon()?;
+
+let omni_paxos = OmniPaxos::with_hocon(
+    &amp;cfg
+    my_peers,
+    storage,
+    None,
+    None,
+);
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                                                    <a rel="prev" href="../ble/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                                    <a rel="prev" href="../introduction/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
                         
@@ -191,7 +234,7 @@ OmniPaxos::with_hocon(
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                                    <a rel="prev" href="../ble/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                    <a rel="prev" href="../introduction/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
                 
