--- a/introduction/index.html
+++ b/introduction/index.html
@@ -149,7 +149,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>The OmniPaxos library is mainly driven by the <a href="../omnipaxos/index.html"><strong>OmniPaxos</strong></a> and <a href="../ble/index.html"><strong>Ballot Leader Election</strong></a> (<em>BLE</em>) structs.  These are plain Rust structs and the user therefore needs to provide a network implementation themselves to actually send and receive messages. In this tutorial we will show how a user should interact with these structs in order to implement a fault-tolerant replicated log. This tutorial will focus on how to use the library and showcase its features. </p>
+<p>The OmniPaxos library is mainly driven by the <a href="../omnipaxos/index.html"><strong>OmniPaxos</strong></a> and <a href="../ble/index.html"><strong>Ballot Leader Election</strong></a> (<em>BLE</em>) structs.  These are plain Rust structs and the user therefore needs to provide a network implementation themselves to actually send and receive messages. In this tutorial we will show how a user should interact with these structs in order to implement a strongly consistent, replicated log. This tutorial will focus on how to use the library and showcase its features. </p>
 <!-- For the properties and advantages of OmniPaxos in comparison to other similar protocols, we refer to the Omni-Paxos paper. -->
                     </main>
 
