--- a/omnipaxos/communication.html
+++ b/omnipaxos/communication.html
@@ -152,27 +152,34 @@
 <p>As previously mentioned, the user has to send/receive messages between servers themselves. In this section, we show how the user interacts with OmniPaxos and its incoming and outgoing messages. Furthermore, we show how new log entries are proposed and handled when they get decided. </p>
 <h2 id="propose-entries"><a class="header" href="#propose-entries">Propose Entries</a></h2>
 <p>To propose a log entry to be replicated, the <code>OmniPaxos::propose_normal()</code> function is called (we reuse the <code>storage</code> and <code>omni_paxos</code> variables created in earlier <a href="../omnipaxos/index.html">examples</a>):</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">let data: Vec&lt;u8&gt; = ... ;   // log entry as raw bytes
-omni_paxos.propose_normal(data).expect(&quot;Failed to propose normal proposal&quot;);
+<pre><code class="language-rust edition2018 no_run noplaypen">let kv = KeyValue { key: String::from(&quot;a&quot;), value: &quot;123&quot; } ;   // log entry as raw bytes
+omni_paxos.propose_normal(kv).expect(&quot;Failed to propose normal proposal&quot;);
 </code></pre>
 <p>Proposals can be pipelined without waiting for preceeding entries to be decided. Furthermore, <code>propose_normal</code> can be called on any server. If the calling server is not the leader, the proposal will be forwarded. </p>
-<blockquote>
-<p><strong>Note</strong> For now, we only support proposing and deciding raw byte log entries with <code>Vec&lt;u8&gt;</code>. However, it would be possible to use a generic log entry type <code>T</code>. We would be more than happy to guide/help anyone interested in implementing this :)</p>
-</blockquote>
 <h2 id="incoming-and-outgoing"><a class="header" href="#incoming-and-outgoing">Incoming and Outgoing</a></h2>
 <p>By proposing a log entry, the <code>OmniPaxos</code> instance will produce outgoing messages to its peers. The outgoing messages can be accessed by calling <code>OmniPaxos::get_outgoing_msgs()</code>. These messages then need to be sent to the intended server by the user themselves on the network layer. An incoming message should then be handled with the function <code>OmniPaxos::handle()</code>. Handling the incoming message will change the state and produce outgoing messages of <code>OmniPaxos</code> according to the protocol.</p>
 <pre><code class="language-rust edition2018 no_run noplaypen">// send outgoing messages (this should be called periodically, e.g. every 500ms)
-for out_msg in omni_paxos.get_outgoings_msgs() {
+for out_msg: Message&lt;KeyValue&gt; in omni_paxos.get_outgoings_msgs() {
     let receiver = out_msg.to;
     // send out_msg to receiver on network layer
 }
 
 // handle incoming message on network layer
-let msg: PaxosMsg = ...;    // message received to this server.
+let msg: PaxosMsg:&lt;KeyValue&gt; = ...;    // message received to this server.
 omni_paxos.handle(msg);
 </code></pre>
 <h2 id="decided-entries"><a class="header" href="#decided-entries">Decided Entries</a></h2>
-<p>If a server is not partitioned from the leader, its local instance eventually decide log entries that are guaranteed to be consistent and linearizable. Thus, these entries can be fetched via <code>OmniPaxos::get_latest_decided_entries()</code> and are safe to be handled by a higher level application. </p>
+<p>Once an entry has been appended to the log on a majority of the cluster, it has been <strong>decided</strong>. The decided entries can be fetched via <code>OmniPaxos::get_latest_decided_entries()</code> and are safe to be handled by a higher level application that requires strong consistency.</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">// handle decided log entries periodically
+for entry in omni_paxos.get_latest_decided_entries() {
+    match entry {
+        Entry::Normal(e) =&gt; {    // handle decided normal log entry
+            // e is of type KeyValue that was proposed.
+        }
+        _ =&gt; { /* see next section about reconfiguration */ }
+    }
+}
+</code></pre>
 <blockquote>
 <p><strong>Note</strong> <code>get_latest_decided_entries()</code> returns all the decided elements <strong>since the last time it was called</strong> and is thus intended to be called periodically. To get all decided entries (since the start), use <code>get_decided_entries()</code></p>
 </blockquote>
@@ -186,25 +193,25 @@ omni_paxos.propose_reconfiguration(new_cluster, None).expect(&quot;Failed to pro
 // handle decided log entries periodically
 for entry in omni_paxos.get_latest_decided_entries() {
     match entry {
-        Entry::Normal(data) =&gt; {    // handle decided normal log entry
-            // data in Vec&lt;u8&gt; that was proposed.
-        }
+        Entry::Normal(_) =&gt; { /* See previous section */ }
+    
         Entry::StopSign(ss) =&gt; {    // handle completed reconfiguration
             let next_configuration_id = ss.config_id;
             let next_cluster = ss.nodes;
             let next_leader = ss.skip_prepare_use_leader;   // if Some(), then the replica instances in the new
                                                             // configuration should use this in their constructor
-            // handle reconfiguration
         }
     }
 }
 
 </code></pre>
 <p>Upon deciding a <code>StopSign</code>, the user should create a new replica instance with the new configuration id if the corresponding server is in <code>StopSign.nodes</code>. Furthermore, the user should also notify and migrate the log to any new servers joining the cluster. To stop the old instance and get the final log in the old configuration, one can call:</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">let final_seq = self.omni_paxos.stop_and_get_sequence();
+<pre><code class="language-rust edition2018 no_run noplaypen">let log: Vec&lt;Entry&lt;KeyValue&gt;&gt; = self.omni_paxos.stop_and_get_sequence();
 // notify about reconfiguration and migrate log to new servers
 </code></pre>
-<p>The user has to implement the log migration themselves. We do not support it since depending on the deployed environment, it could require specific migration schemes to achieve best performance and lowest cost.</p>
+<blockquote>
+<p><strong>Note</strong> The user has to implement the log migration themselves before starting the new <code>OmniPaxos</code> instances.</p>
+</blockquote>
 
                     </main>
 
