--- a/omnipaxos/index.html
+++ b/omnipaxos/index.html
@@ -150,31 +150,30 @@
                     <main>
                         <h1 id="omnipaxos"><a class="header" href="#omnipaxos">OmniPaxos</a></h1>
 <p>Each server in the cluster should have a local instance of the  <code>OmniPaxos</code> struct. <code>OmniPaxos</code> maintains a local state of the replicated log, handles incoming messages and produces outgoing messages that the user has to fetch and send using their network implementation. The user also has to fetch the decided entries that are guaranteed to be strongly consistent and linearizable, and therefore also safe to be used in a higher-level application.</p>
-<blockquote>
-<p><strong>Note:</strong> <code>OmniPaxos</code> has a type parameter <code>R</code> that must implement the trait <code>Round</code>. This is the round numbers used in the log replication. It will be provided and furthered explained in <a href="../ble/index.html">Ballot Leader Election</a>, but for simplicity the reader can for now assume <code>R</code> to be <code>u64</code>.</p>
-</blockquote>
-<h2 id="storage"><a class="header" href="#storage">Storage</a></h2>
-<p>The replicated log can be stored using any underlying implementation provided by the user. OmniPaxos only requires a user to implement the traits <code>PaxosState&lt;R&gt;</code> and <code>Sequence&lt;R&gt;</code>. The <code>PaxosState&lt;R&gt;</code> maintains the internal state of the <code>OmniPaxos</code>, while <code>Sequence&lt;R&gt;</code> maintains the actual replicated log. The storage is split into these two traits since <code>PaxosState&lt;R&gt;</code> stores small values such as indexes, while <code>Sequence&lt;R&gt;</code> stores larger data (the log entries). Thus it is possible to tailor-fit the implementations respectively. </p>
-<h3 id="example-in-memory-storage"><a class="header" href="#example-in-memory-storage">Example: In-memory storage</a></h3>
-<p>OmniPaxos provides an in-memory storage implementation in the traits <code>MemorySequence</code> and <code>MemoryState</code>.</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos::storage::memory_storage::{MemorySequence, MemoryState, Storage};
-
-let storage = Storage::with(MemorySequence::&lt;R&gt;::new(), MemoryState::&lt;R&gt;::new());
+<h2 id="example-key-value-store"><a class="header" href="#example-key-value-store">Example: Key-Value store</a></h2>
+<p>As a guide for this tutorial, we will use OmniPaxos to implement a replicated log for the purpose of a consistent Key-Value store. </p>
+<p>We begin by defining the type that we want our log entries to consist of:</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">pub struct KeyValue {
+    pub key: String,
+    pub value: u64
+}
 </code></pre>
+<h2 id="storage"><a class="header" href="#storage">Storage</a></h2>
+<p>The replicated log can be stored using any underlying implementation provided by the user. OmniPaxos only requires the user to implement the traits <code>PaxosState</code> and <code>Sequence&lt;T&gt;</code>. The <code>PaxosState</code> maintains the internal state of the protocol, while <code>Sequence&lt;T&gt;</code> maintains the actual replicated log. In our example, <code>T</code> is <code>KeyValue</code>. The storage is split into these two traits since <code>PaxosState</code> stores small values such as indexes, while <code>Sequence&lt;T&gt;</code> stores larger data (the log entries). Thus it is possible to tailor-fit the implementations respectively. </p>
+<p>OmniPaxos provides an in-memory storage implementation in the structs <code>MemoryState</code> and <code>MemorySequence&lt;T&gt;</code>.</p>
 <h2 id="creating-an-omnipaxos-instance"><a class="header" href="#creating-an-omnipaxos-instance">Creating an OmniPaxos instance</a></h2>
 <p>The constructor of <code>OmniPaxos</code> has the following parameters.</p>
 <pre><code class="language-rust edition2018 no_run noplaypen">OmniPaxos::with(
     config_id: u32,                                 // the configuration id. See the section &quot;Reconfiguration&quot; in `Communication`.
     pid: u64,                                       // the unique identifier of this server
     peers: Vec&lt;u64&gt;,                                // the PEERS of this server. I.e. this should not include `pid`
-    storage: Storage&lt;R, S, P&gt;,
-    skip_prepare_use_leader: Option&lt;Leader&lt;R&gt;&gt;,     // optimization to start with pre-determined leader after
+    skip_prepare_use_leader: Option&lt;Ballot&gt;,        // optimization to start with pre-determined leader after
                                                     // reconfiguration. See &quot;Reconfiguration&quot;.
     logger: Option&lt;Logger&gt;,                         // custom logger
     log_file_path: Option&lt;&amp;str&gt;,                    
 )
 </code></pre>
-<p>With the initialized storage, we can go ahead and create our <code>OmniPaxos</code> replica instance:</p>
+<p>Let’s go ahead and create our <code>OmniPaxos</code> replica instance:</p>
 <pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos::paxos::OmniPaxos;
 
 // configuration with id 1 and the following cluster
@@ -185,7 +184,7 @@ let _cluster = vec![1, 2, 3];
 let my_pid = 2;
 let my_peers= vec![1, 3];
 
-let omni_paxos = OmniPaxos::with(
+let omni_paxos: OmniPaxos&lt;KeyValue, MemorySequence, MemoryState&gt; = OmniPaxos::with(
     configuration_id,
     my_pid,
     my_peers,
