--- a/print.html
+++ b/print.html
@@ -176,8 +176,13 @@ The latest version can be found on [crates.io](https://crates.io/crates/omnipaxo
 <!--You can also point cargo to the latest [Github](https://github.com/haraldng/omnipaxos) master version, instead of a release.  -->
 <p>To do so add the following to your Cargo.toml:</p>
 <pre><code class="language-toml">[dependencies]
-omnipaxos = { git = &quot;https://github.com/haraldng/omnipaxos&quot; }
+omnipaxos_core = { git = &quot;https://github.com/haraldng/omnipaxos&quot; }
 </code></pre>
+<p>or </p>
+<pre><code class="language-toml">[dependencies]
+omnipaxos_runtime = { git = &quot;https://github.com/haraldng/omnipaxos&quot; }
+</code></pre>
+<p>Depending on if you want to use just the core structs or the runtime (see <a href="./foreword.html">here</a>). For the first chapters of this tutorial we will use <code>omnipaxos_core</code>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>The OmniPaxos library is mainly driven by the <a href="introduction/../sequencepaxos/index.html"><strong>SequencePaxos</strong></a> and <a href="introduction/../ble/index.html"><strong>Ballot Leader Election</strong></a> (<em>BLE</em>) structs.  These are plain Rust structs and the user therefore needs to provide a network implementation themselves to actually send and receive messages. In this tutorial we will show how a user should interact with these structs in order to implement a strongly consistent, replicated log. This tutorial will focus on how to use the library and showcase its features. </p>
 <!-- For the properties and advantages of OmniPaxos in comparison to other similar protocols, we refer to the Omni-Paxos paper. --><div style="break-before: page; page-break-before: always;"></div><h1 id="sequencepaxos"><a class="header" href="#sequencepaxos">SequencePaxos</a></h1>
