deploy: 020bb090d7127454b5dcbf42b9e9492bf1cfed81

--- a/print.html
+++ b/print.html
@@ -675,11 +675,16 @@ OmniPaxos API docs are hosted on [docs.rs](https://docs.rs/kompact/latest/kompac
 <h2 id="sources--issues"><a class="header" href="#sources--issues">Sources &amp; Issues</a></h2>
 <p>The sources for OmniPaxos can be found on <a href="https://github.com/haraldng/omnipaxos">Github</a>.</p>
 <p>All issues and requests related to OmniPaxos should be posted there.</p>
-<h2 id="bleeding-edge"><a class="header" href="#bleeding-edge">Bleeding Edge</a></h2>
-<p>This tutorial is built off the <code>master</code> branch on GitHub and thus tends to be a bit ahead of what is available in a release.
-If you would like to try out new features before they are released, you can add the following to your <code>Cargo.toml</code>:</p>
-<pre><code class="language-toml">omnipaxos = { git = &quot;https://github.com/haraldng/omnipaxos&quot;, branch = &quot;master&quot; }
-</code></pre>
+<!---
+## Bleeding Edge
+
+This tutorial is built off the `master` branch on GitHub and thus tends to be a bit ahead of what is available in a release.
+If you would like to try out new features before they are released, you can add the following to your `Cargo.toml`:
+
+```toml
+omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos", branch = "master" }
+```
+--->
 <h3 id="documentation"><a class="header" href="#documentation">Documentation</a></h3>
 <p>If you need the API docs for the latest master run the following at an appropriate location (e.g., outside another local git repository):</p>
 <pre><code class="language-bash">git checkout https://github.com/haraldng/omnipaxos
